--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <h1>Hello world!</h1>
         <p>
             <strong>My name is:</strong>
-            *** YOUR NAME HERE ***
+            *** Jaeyeon Kate Kim ***
         </p>
         <p>
             <strong>My email address is:</strong>
-            *** YOUR EMAIL HERE ***
+            *** jaeyeon.k@wustl.edu ***
         </p>
         <p>
             <strong>I am taking this class because:</strong>
-            *** WHY HERE ***
+            *** I want to visualize and have an understanding of how websites are made and styled. ***
         </p>
 
     </body>
