--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
         <title>CSE 204 - Assignment 01 Hello World</title>
 
     </head>
-    <body>
-
-        <h1>Hello world!</h1>
-        <p>
-            <strong>My name is:</strong>
-            *** Jaeyeon Kate Kim ***
-        </p>
-        <p>
-            <strong>My email address is:</strong>
-            *** jaeyeon.k@wustl.edu ***
-        </p>
-        <p>
-            <strong>I am taking this class because:</strong>
-            *** I want to visualize and have an understanding of how websites are made and styled. ***
-        </p>
-
+    <body bgcolor="black">
+        <font color="green">
+            <h1>Hello world!</h1>
+            <p>
+                <strong>My name is:</strong>
+                Jaeyeon Kate Kim
+            </p>
+            <p>
+                <strong>My email address is:</strong>
+                jaeyeon.k@wustl.edu
+            </p>
+            <p>
+                <strong>I am taking this class because:</strong>
+                I want to visualize and have an understanding of how websites are made and styled.
+            </p>
+        </font>
     </body>
 </html>
