--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
 
     </head>
     <body bgcolor="black">
-        <font color="green">
-            <h1>Hello world!</h1>
-            <p>
-                <strong>My name is:</strong>
-                Jaeyeon Kate Kim
-            </p>
-            <p>
-                <strong>My email address is:</strong>
-                jaeyeon.k@wustl.edu
-            </p>
-            <p>
-                <strong>I am taking this class because:</strong>
-                I want to visualize and have an understanding of how websites are made and styled.
-            </p>
-        </font>
+        <center>
+            <font color="green">
+                <h1>Hello world!</h1>
+                <p>
+                    <strong>My name is:</strong>
+                    Jaeyeon Kate Kim
+                </p>
+                <p>
+                    <strong>My email address is:</strong>
+                    jaeyeon.k@wustl.edu
+                </p>
+                <p>
+                    <strong>I am taking this class because:</strong>
+                    I want to visualize and have an understanding of how websites are made and styled.
+                </p>
+            </font>
+        </center>
     </body>
 </html>
